# colombia-chatbot-rag

./: .env.example  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 7437667c17d8_initial_migration.py
src/api/: database.py  main.py
src/api/endpoints/: chat.py  conversations.py
src/models/: schemas.py  sql.py
src/rag/: data_extractor.py  embeddings.py  init.py  text_processor.py  vector_store.py
src/services/: conversation_service.py  prompt_manager.py  rag_service.py
streamlit_app/: app.py
streamlit_app/components/: chat_interface.py  sidebar.py
streamlit_app/utils/: api_client.py
tests/api/: test_endpoints.py
tests/rag/: test_data_extractor.py
