[project]
name = "colombia-chatbot-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.28",
    "langchain-pinecone>=0.2.9",
    "lxml>=6.0.0",
    "pinecone>=7.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scalar-fastapi>=1.2.2",
    "scrapy>=2.13.3",
    "tiktoken>=0.9.0",
    "uvicorn>=0.35.0",
    "w3lib>=2.3.1",
    "asyncpg>=0.29.0",
    "SQLAlchemy[asyncio]>=2.0.31",
    "alembic>=1.13.2",
    "psycopg2-binary>=2.9.9",
]
